# jupyter_cpu_alive

./: README.md  pyproject.toml
jupyter-config/: jupyter_cpu_alive.json
jupyter_cpu_alive/: __init__.py
