[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter_cpu_alive"
description = "A Jupyter Server extension that accesses and modifies the settings dictionary."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "jupyter_server>=2.0"
]
dynamic = ["version"]

[tool.hatch.version]
path = "jupyter_cpu_alive/__init__.py"

[project.urls]
homepage = "https://example.com/jupyter_cpu_alive"
source = "https://github.com/yourusername/jupyter_cpu_alive"
tracker = "https://github.com/yourusername/jupyter_cpu_alive/issues"

[tool.hatch.build.targets.wheel]
include = [
    "jupyter_cpu_alive/**"
]
[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"

[tool.jupyter]
jupyter_server_extension = [
    "jupyter_cpu_alive"
]
